added styling for first page - landingPage with Trasnlate

--- a/src/ui/theme/ionic-variables.css
+++ b/src/ui/theme/ionic-variables.css
@@ -5,6 +5,7 @@ http://ionicframework.com/docs/theming/ */
 :root {
   /** Overrides */
   --ion-background-color: white;
+  --ion-background-color: #a91740;  
 
   /** primary **/
   --ion-color-primary: var(--primary-color);
