--- a/src/ui/theme/variables.css
+++ b/src/ui/theme/variables.css
@@ -15,6 +15,7 @@
   --success: #6dd63c;
   --warning: #edd036;
   --danger: #eb3f3f;
+  --primary: #a91740;
 
   --background: var(--primary-color);
 }
