feat(page + function) profile page and routing. Function to handle routingif profile exists

--- a/src/static/css/custom_ion.css
+++ b/src/static/css/custom_ion.css
@@ -12,3 +12,12 @@ ion-tab-button{
     --color: black;
     --color-selected: red;
 }
+
+ion-checkbox.custom::part(container) {
+    background-color: white ;
+    --checkmark-color: black;
+}
+
+ion-checkbox.custom{
+    --background-color-checked: #000000;
+ }
